# TON-SOLANA-SMART-WALLET

./: README.md
docs/: ARCHITECTURE.md
frontend/: package-lock.json  package.json
frontend/public/: tonconnect-manifest.json
frontend/solana-contracts/: Anchor.toml  deploy.js  deployment-info.json  deployment-status.json  deployment-summary.md  mock-deploy.js  simple-deploy.js
frontend/solana-contracts/native-program/: Cargo.toml
frontend/solana-contracts/native-program/src/: lib.rs
frontend/solana-contracts/programs/solana-contracts/: Cargo.toml
frontend/solana-contracts/programs/solana-contracts/src/: lib.rs
frontend/src/app/: page.tsx
solana-contracts/: Anchor.toml  package.json
solana-contracts/programs/ton-solana-wallet/: Cargo.toml
solana-contracts/programs/ton-solana-wallet/src/: lib.rs
solana-contracts/tests/: ton-solana-wallet.ts
